# gruvbox-material-gtk

./: INSTALL.md  README.md  build.sh  meson.build  meson_options.txt  test.sh
scripts/: build.sh  test.sh
src/: _shadow.scss  _theme-color.scss  _theme-color.template.scss  _theme.scss  index.theme.in  meson.build
src/gtk-3.0/: gtk-dark.scss.in  gtk.css  gtk.css.map  gtk.scss.in  meson.build
src/gtk-3.0/sass/: _common.scss  _drawing.scss
src/gtk-3.0/sass/apps/: _budgie.scss  _gnome.scss  _libhandy.scss  _lightdm.scss  _mate.scss  _misc.scss  _unity.scss  _xfce.scss
src/gtk-4.0/: gtk-dark.scss.in  gtk.scss.in  meson.build
src/gtk-4.0/sass/: _common.scss  _drawing.scss
